Fixing Spacing

--- a/Pokemon/style.css
+++ b/Pokemon/style.css
@@ -100,6 +100,7 @@ cursor: pointer;
   font-size: 25px;
   font-family: 'poppins', sans-serif;
   font-weight: 400;
+  margin-top: 20px;
 }
 
 li {
@@ -117,13 +118,14 @@ ul{
   font-family: 'poppins', sans-serif;
   font-weight: 700;
   margin: 0px;
-  margin-top: 10px;
+  margin-top: 20px;
+
 }
 .infoP{
   font-size: 15px;
   margin: 0px;
   padding: 0px;
   text-align: left;
-  padding-inline-start: 40px;
+  padding-inline-start: 20px;
 }
 
